InsuranceOrg/force-app/main/default/objects/vlocity_ins__RuleProperty__c/fields/vlocity_ins__PropertyType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PropertyType__c</fullName>
    <label>Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Boolean</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Datetime</fullName>
            </value>
            <value>
                <fullName>Decimal</fullName>
            </value>
            <value>
                <fullName>Double</fullName>
            </value>
            <value>
                <fullName>ID</fullName>
            </value>
            <value>
                <fullName>Integer</fullName>
            </value>
            <value>
                <fullName>List&lt;Boolean&gt;</fullName>
            </value>
            <value>
                <fullName>List&lt;String&gt;</fullName>
            </value>
            <value>
                <fullName>Long</fullName>
            </value>
            <value>
                <fullName>Object</fullName>
            </value>
            <value>
                <fullName>String</fullName>
            </value>
            <value>
                <fullName>Map&lt;String, String&gt;</fullName>
            </value>
            <value>
                <fullName>Map&lt;String, Boolean&gt;</fullName>
            </value>
            <value>
                <fullName>List&lt;Decimal&gt;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>