InsuranceOrg/force-app/main/default/objects/vlocity_ins__RuleProperty__c/fields/vlocity_ins__ScreeningRuleId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ScreeningRuleId__c</fullName>
    <label>Screening Rule</label>
    <referenceTo>vlocity_ins__ScreeningRule__c</referenceTo>
    <relationshipLabel>Rule Properties</relationshipLabel>
    <relationshipName>RuleProperties</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>